Fix TOB issue 8

--- a/config.json
+++ b/config.json
@@ -8,8 +8,7 @@
     "truffle": "",
     "evmVersion": "istanbul",
     "optimizer": {
-      "enabled": true,
-      "runs": 10000
+      "enabled": false
     }
   },
   "linter": "solhint",
