--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -26,6 +26,7 @@
     "@ethersproject/constants": "^5.6.0",
     "@ethersproject/keccak256": "^5.6.0",
     "@ethersproject/providers": "^5.6.0",
+    "@ethersproject/random": "^5.6.0",
     "@ethersproject/solidity": "^5.6.0",
     "@ethersproject/transactions": "^5.6.0",
     "@ethersproject/wallet": "^5.6.0",
