--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "TESTNET_MODE=true NETWORK_ID=eth yarn chain && hardhat --network hardhat test",
     "docgen": "solidity-docgen --solc-module solc -t ./templates",
     "estimate": "hardhat --network hardhat run scripts/estimate-gas.js",
-    "estimate-upgradable": "hardhat --network hardhat run scripts/estimate-gas-upgradable.js",
+    "estimate-upgradable": "UPGRADABLE=true hardhat --network hardhat run scripts/estimate-gas.js",
     "chain": "node scripts/set-chain-config.js",
     "chain:local": "NETWORK_ID=local yarn chain",
     "chain:eth": "NETWORK_ID=eth yarn chain",
@@ -31,7 +31,7 @@
     "chain:optimistic": "NETWORK_ID=optimistic yarn chain",
     "chain:gnosis": "NETWORK_ID=gnosis yarn chain",
     "chain:tron": "NETWORK_ID=tron yarn chain",
-    "testnet": "TESTNET_MODE=true yarn chain && hardhat run scripts/testnets/deploy-upgradable.js",
+    "testnet": "TESTNET_MODE=true yarn chain && UPGRADABLE=true hardhat run scripts/evm/deploy.js",
     "testnet:eth": "NETWORK_ID=eth yarn testnet",
     "testnet:bnb": "NETWORK_ID=bnb yarn testnet",
     "testnet:poly": "NETWORK_ID=polygon yarn testnet",
@@ -43,7 +43,7 @@
     "testnet:evmos": "NETWORK_ID=evmos yarn testnet",
     "testnet:gnosis": "NETWORK_ID=gnosis yarn testnet",
     "testnet:tron": "NETWORK_ID=tron TESTNET_MODE=true yarn chain && hardhat run scripts/tron/deploy.js",
-    "testnet-up": "TESTNET_MODE=true yarn chain && hardhat run scripts/testnets/upgrade.js",
+    "testnet-up": "TESTNET_MODE=true yarn chain && hardhat run scripts/evm/upgrade.js",
     "testnet-up:eth": "NETWORK_ID=eth yarn testnet-up",
     "testnet-up:bnb": "NETWORK_ID=bnb yarn testnet-up",
     "testnet-up:poly": "NETWORK_ID=polygon yarn testnet-up",
@@ -54,8 +54,8 @@
     "testnet-up:aurora": "NETWORK_ID=aurora yarn testnet-up",
     "testnet-up:evmos": "NETWORK_ID=evmos yarn testnet-up",
     "testnet-up:gnosis": "NETWORK_ID=gnosis yarn testnet-up",
-    "testnet-up:tron": "NETWORK_ID=tron TESTNET_MODE=true yarn chain && hardhat run scripts/tron/update.js",
-    "deploy": "yarn chain && hardhat run scripts/mainnets/deploy-upgradable.js",
+    "testnet-up:tron": "NETWORK_ID=tron TESTNET_MODE=true yarn chain && hardhat run scripts/tron/upgrade.js",
+    "deploy": "yarn chain && UPGRADABLE=true hardhat run scripts/evm/deploy.js",
     "deploy:eth": "HARDHAT_NETWORK=eth yarn deploy",
     "deploy:bnb": "HARDHAT_NETWORK=bnb yarn deploy",
     "deploy:poly": "HARDHAT_NETWORK=polygon yarn deploy",
@@ -70,7 +70,7 @@
     "deploy:movr": "HARDHAT_NETWORK=movr yarn deploy",
     "deploy:beam": "HARDHAT_NETWORK=beam yarn deploy",
     "deploy:tron": "NETWORK_ID=tron yarn chain && hardhat run scripts/tron/deploy.js",
-    "up": "yarn chain && hardhat run scripts/mainnets/upgrade.js",
+    "up": "yarn chain && hardhat run scripts/evm/upgrade.js",
     "up:eth": "HARDHAT_NETWORK=eth yarn up",
     "up:bnb-18": "HARDHAT_NETWORK=bnb yarn up",
     "up:poly": "HARDHAT_NETWORK=polygon yarn up",
@@ -85,9 +85,9 @@
     "up:movr": "HARDHAT_NETWORK=movr yarn up",
     "up:beam": "HARDHAT_NETWORK=beam yarn up",
     "up:tron": "HARDHAT_NETWORK=tron yarn chain && hardhat run scripts/tron/update.js",
-    "deploy-refund": "yarn chain && hardhat run scripts/mainnets/deploy-refund.js",
+    "deploy-refund": "yarn chain && hardhat run scripts/evm/deploy-refund.js",
     "deploy-refund:poly": "HARDHAT_NETWORK=polygon yarn deploy-refund",
-    "pool": "hardhat run scripts/mainnets/pool.js",
+    "pool": "hardhat run scripts/evm/pool.js",
     "pool:eth": "HARDHAT_NETWORK=eth yarn pool",
     "pool:bnb": "HARDHAT_NETWORK=bnb yarn pool",
     "pool:poly": "HARDHAT_NETWORK=polygon yarn pool",
@@ -102,11 +102,11 @@
     "pool:movr": "HARDHAT_NETWORK=movr yarn pool",
     "pool:beam": "HARDHAT_NETWORK=beam yarn pool",
     "pool:tron": "hardhat run scripts/tron/pool.js",
-    "token": "yarn chain && hardhat run scripts/mainnets/token.js",
-    "token:avax": "HARDHAT_NETWORK=avax yarn token",
-    "token:arb": "HARDHAT_NETWORK=arb yarn token",
-    "token:cfx": "HARDHAT_NETWORK=cfx yarn token",
-    "token:evmos": "HARDHAT_NETWORK=evmos yarn token"
+    "uct": "yarn chain && hardhat run scripts/evm/uct/index.js",
+    "uct:avax": "HARDHAT_NETWORK=avax yarn token",
+    "uct:arb": "HARDHAT_NETWORK=arb yarn token",
+    "uct:cfx": "HARDHAT_NETWORK=cfx yarn token",
+    "uct:evmos": "HARDHAT_NETWORK=evmos yarn token"
   },
   "devDependencies": {
     "@mesonfi/contract-abis": "^1.0.0-alpha.1",
