--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "docgen": "solidity-docgen --solc-module solc -t ./templates",
     "estimate": "hardhat --network hardhat run scripts/estimate-gas.js",
     "estimate-upgradable": "UPGRADABLE=true hardhat --network hardhat run scripts/estimate-gas.js",
-    "chain": "node scripts/set-chain-config.js",
+    "chain": "node scripts/config/set-chain-config.js",
     "chain:local": "NETWORK_ID=local yarn chain",
     "chain:eth": "NETWORK_ID=eth yarn chain",
     "chain:bnb": "NETWORK_ID=bnb yarn chain",
@@ -31,7 +31,7 @@
     "chain:optimistic": "NETWORK_ID=optimistic yarn chain",
     "chain:gnosis": "NETWORK_ID=gnosis yarn chain",
     "chain:tron": "NETWORK_ID=tron yarn chain",
-    "testnet": "TESTNET_MODE=true yarn chain && UPGRADABLE=true hardhat run scripts/evm/deploy.js",
+    "testnet": "TESTNET_MODE=true yarn chain && UPGRADABLE=true hardhat run scripts/deploy.js",
     "testnet:eth": "NETWORK_ID=eth yarn testnet",
     "testnet:bnb": "NETWORK_ID=bnb yarn testnet",
     "testnet:poly": "NETWORK_ID=polygon yarn testnet",
@@ -42,8 +42,9 @@
     "testnet:aurora": "NETWORK_ID=aurora yarn testnet",
     "testnet:evmos": "NETWORK_ID=evmos yarn testnet",
     "testnet:gnosis": "NETWORK_ID=gnosis yarn testnet",
-    "testnet:tron": "NETWORK_ID=tron TESTNET_MODE=true yarn chain && hardhat run scripts/tron/deploy.js",
-    "testnet-up": "TESTNET_MODE=true yarn chain && hardhat run scripts/evm/upgrade.js",
+    "testnet:eos": "NETWORK_ID=eos yarn testnet",
+    "testnet:tron": "NETWORK_ID=tron yarn testnet",
+    "testnet-up": "TESTNET_MODE=true yarn chain && hardhat run scripts/upgrade.js",
     "testnet-up:eth": "NETWORK_ID=eth yarn testnet-up",
     "testnet-up:bnb": "NETWORK_ID=bnb yarn testnet-up",
     "testnet-up:poly": "NETWORK_ID=polygon yarn testnet-up",
@@ -54,8 +55,9 @@
     "testnet-up:aurora": "NETWORK_ID=aurora yarn testnet-up",
     "testnet-up:evmos": "NETWORK_ID=evmos yarn testnet-up",
     "testnet-up:gnosis": "NETWORK_ID=gnosis yarn testnet-up",
-    "testnet-up:tron": "NETWORK_ID=tron TESTNET_MODE=true yarn chain && hardhat run scripts/tron/upgrade.js",
-    "deploy": "yarn chain && UPGRADABLE=true hardhat run scripts/evm/deploy.js",
+    "testnet-up:eos": "NETWORK_ID=eos yarn testnet-up",
+    "testnet-up:tron": "NETWORK_ID=tron yarn testnet-up",
+    "deploy": "yarn chain && UPGRADABLE=true hardhat run scripts/deploy.js",
     "deploy:eth": "HARDHAT_NETWORK=eth yarn deploy",
     "deploy:bnb": "HARDHAT_NETWORK=bnb yarn deploy",
     "deploy:poly": "HARDHAT_NETWORK=polygon yarn deploy",
@@ -69,8 +71,9 @@
     "deploy:evmos": "HARDHAT_NETWORK=evmos yarn deploy",
     "deploy:movr": "HARDHAT_NETWORK=movr yarn deploy",
     "deploy:beam": "HARDHAT_NETWORK=beam yarn deploy",
-    "deploy:tron": "NETWORK_ID=tron yarn chain && hardhat run scripts/tron/deploy.js",
-    "up": "yarn chain && hardhat run scripts/evm/upgrade.js",
+    "deploy:eos": "HARDHAT_NETWORK=eos yarn deploy",
+    "deploy:tron": "HARDHAT_NETWORK=tron yarn deploy",
+    "up": "yarn chain && hardhat run scripts/upgrade.js",
     "up:eth": "HARDHAT_NETWORK=eth yarn up",
     "up:bnb-18": "HARDHAT_NETWORK=bnb yarn up",
     "up:poly": "HARDHAT_NETWORK=polygon yarn up",
@@ -84,10 +87,11 @@
     "up:evmos": "HARDHAT_NETWORK=evmos yarn up",
     "up:movr": "HARDHAT_NETWORK=movr yarn up",
     "up:beam": "HARDHAT_NETWORK=beam yarn up",
-    "up:tron": "HARDHAT_NETWORK=tron yarn chain && hardhat run scripts/tron/update.js",
-    "deploy-refund": "yarn chain && hardhat run scripts/evm/deploy-refund.js",
-    "deploy-refund:poly": "HARDHAT_NETWORK=polygon yarn deploy-refund",
-    "pool": "hardhat run scripts/evm/pool.js",
+    "up:eos": "HARDHAT_NETWORK=eos yarn up",
+    "up:tron": "HARDHAT_NETWORK=tron yarn up",
+    "deploy-forward": "yarn chain && hardhat run scripts/deploy-forward.js",
+    "deploy-forward:poly": "HARDHAT_NETWORK=polygon yarn deploy-forward",
+    "pool": "hardhat run scripts/pool.js",
     "pool:eth": "HARDHAT_NETWORK=eth yarn pool",
     "pool:bnb": "HARDHAT_NETWORK=bnb yarn pool",
     "pool:poly": "HARDHAT_NETWORK=polygon yarn pool",
@@ -101,8 +105,9 @@
     "pool:evmos": "HARDHAT_NETWORK=evmos yarn pool",
     "pool:movr": "HARDHAT_NETWORK=movr yarn pool",
     "pool:beam": "HARDHAT_NETWORK=beam yarn pool",
-    "pool:tron": "hardhat run scripts/tron/pool.js",
-    "uct": "yarn chain && hardhat run scripts/evm/uct/index.js",
+    "pool:eos": "HARDHAT_NETWORK=eos yarn pool",
+    "pool:tron": "HARDHAT_NETWORK=tron yarn pool",
+    "uct": "yarn chain && hardhat run scripts/uct.js",
     "uct:avax": "HARDHAT_NETWORK=avax yarn token",
     "uct:arb": "HARDHAT_NETWORK=arb yarn token",
     "uct:cfx": "HARDHAT_NETWORK=cfx yarn token",
