--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/sdk",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-rc.1",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
@@ -30,8 +30,8 @@
     "@ethersproject/solidity": "^5.6.0",
     "@ethersproject/transactions": "^5.6.0",
     "@ethersproject/wallet": "^5.6.0",
-    "@mesonfi/contract-abis": "^1.0.0-alpha.1",
-    "@mesonfi/contract-types": "^1.0.0-alpha.1"
+    "@mesonfi/contract-abis": "^1.0.0-rc.1",
+    "@mesonfi/contract-types": "^1.0.0-rc.1"
   },
   "devDependencies": {
     "@ethersproject/contracts": "^5.6.0",
