--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meson-contracts-solidity",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-rc.1",
   "main": "index.js",
   "private": true,
   "engines": {
@@ -11,109 +11,42 @@
     "postbuild": "cp artifacts/contracts/Meson.sol/Meson.json packages/contract-abis/abis/Meson.json && cp artifacts/contracts/test/MockToken.sol/MockToken.json packages/contract-abis/abis/ERC20.json",
     "cleanbuild": "hardhat clean && yarn build",
     "build:packages": "yarn workspace @mesonfi/sdk build && yarn workspace @mesonfi/presets build",
-    "build:types": "TESTNET_MODE=true yarn chain:eth && yarn cleanbuild",
-    "test": "TESTNET_MODE=true NETWORK_ID=eth yarn chain && hardhat --network hardhat test",
+    "build:types": "hardhat chain --testnet ropsten && yarn cleanbuild",
+    "test": "hardhat chain --testnet ropsten && hardhat test",
     "docgen": "solidity-docgen --solc-module solc -t ./templates",
-    "estimate": "hardhat --network hardhat run scripts/estimate-gas.js",
-    "estimate-upgradable": "UPGRADABLE=true hardhat --network hardhat run scripts/estimate-gas.js",
-    "chain": "node scripts/config/set-chain-config.js",
-    "chain:local": "NETWORK_ID=local yarn chain",
-    "chain:eth": "NETWORK_ID=eth yarn chain",
-    "chain:bnb": "NETWORK_ID=bnb yarn chain",
-    "chain:avax": "NETWORK_ID=avax yarn chain",
-    "chain:poly": "NETWORK_ID=polygon yarn chain",
-    "chain:ftm": "NETWORK_ID=ftm yarn chain",
-    "chain:cfx": "NETWORK_ID=cfx yarn chain",
-    "chain:one": "NETWORK_ID=one yarn chain",
-    "chain:aurora": "NETWORK_ID=aurora yarn chain",
-    "chain:evmos": "NETWORK_ID=evmos && yarn chain",
-    "chain:arbitrum": "NETWORK_ID=arbitrum yarn chain",
-    "chain:optimistic": "NETWORK_ID=optimistic yarn chain",
-    "chain:gnosis": "NETWORK_ID=gnosis yarn chain",
-    "chain:tron": "NETWORK_ID=tron yarn chain",
-    "testnet": "TESTNET_MODE=true yarn chain && UPGRADABLE=true hardhat run scripts/deploy.js",
-    "testnet:eth": "NETWORK_ID=eth yarn testnet",
-    "testnet:bnb": "NETWORK_ID=bnb yarn testnet",
-    "testnet:poly": "NETWORK_ID=polygon yarn testnet",
-    "testnet:avax": "NETWORK_ID=avax yarn testnet",
-    "testnet:ftm": "NETWORK_ID=ftm yarn testnet",
-    "testnet:cfx": "NETWORK_ID=cfx yarn testnet",
-    "testnet:one": "NETWORK_ID=one yarn testnet",
-    "testnet:aurora": "NETWORK_ID=aurora yarn testnet",
-    "testnet:evmos": "NETWORK_ID=evmos yarn testnet",
-    "testnet:gnosis": "NETWORK_ID=gnosis yarn testnet",
-    "testnet:eos": "NETWORK_ID=eos yarn testnet",
-    "testnet:tron": "NETWORK_ID=tron yarn testnet",
-    "testnet-up": "TESTNET_MODE=true yarn chain && hardhat run scripts/upgrade.js",
-    "testnet-up:eth": "NETWORK_ID=eth yarn testnet-up",
-    "testnet-up:bnb": "NETWORK_ID=bnb yarn testnet-up",
-    "testnet-up:poly": "NETWORK_ID=polygon yarn testnet-up",
-    "testnet-up:avax": "NETWORK_ID=avax yarn testnet-up",
-    "testnet-up:ftm": "NETWORK_ID=ftm yarn testnet-up",
-    "testnet-up:cfx": "NETWORK_ID=cfx yarn testnet-up",
-    "testnet-up:one": "NETWORK_ID=one yarn testnet-up",
-    "testnet-up:aurora": "NETWORK_ID=aurora yarn testnet-up",
-    "testnet-up:evmos": "NETWORK_ID=evmos yarn testnet-up",
-    "testnet-up:gnosis": "NETWORK_ID=gnosis yarn testnet-up",
-    "testnet-up:eos": "NETWORK_ID=eos yarn testnet-up",
-    "testnet-up:tron": "NETWORK_ID=tron yarn testnet-up",
-    "deploy": "yarn chain && UPGRADABLE=true hardhat run scripts/deploy.js",
-    "deploy:eth": "HARDHAT_NETWORK=eth yarn deploy",
-    "deploy:bnb": "HARDHAT_NETWORK=bnb yarn deploy",
-    "deploy:poly": "HARDHAT_NETWORK=polygon yarn deploy",
-    "deploy:avax": "HARDHAT_NETWORK=avax yarn deploy",
-    "deploy:ftm": "HARDHAT_NETWORK=ftm yarn deploy",
-    "deploy:arb": "HARDHAT_NETWORK=arb yarn deploy",
-    "deploy:opt": "HARDHAT_NETWORK=opt yarn deploy",
-    "deploy:one": "HARDHAT_NETWORK=one yarn deploy",
-    "deploy:aurora": "HARDHAT_NETWORK=aurora yarn deploy",
-    "deploy:cfx": "HARDHAT_NETWORK=cfx yarn deploy",
-    "deploy:evmos": "HARDHAT_NETWORK=evmos yarn deploy",
-    "deploy:movr": "HARDHAT_NETWORK=movr yarn deploy",
-    "deploy:beam": "HARDHAT_NETWORK=beam yarn deploy",
-    "deploy:eos": "HARDHAT_NETWORK=eos yarn deploy",
-    "deploy:tron": "HARDHAT_NETWORK=tron yarn deploy",
-    "up": "yarn chain && hardhat run scripts/upgrade.js",
-    "up:eth": "HARDHAT_NETWORK=eth yarn up",
-    "up:bnb-18": "HARDHAT_NETWORK=bnb yarn up",
-    "up:poly": "HARDHAT_NETWORK=polygon yarn up",
-    "up:avax": "HARDHAT_NETWORK=avax yarn up",
-    "up:ftm": "HARDHAT_NETWORK=ftm yarn up",
-    "up:arb": "HARDHAT_NETWORK=arb yarn up",
-    "up:opt": "HARDHAT_NETWORK=opt yarn up",
-    "up:one": "HARDHAT_NETWORK=one yarn up",
-    "up:cfx-18": "HARDHAT_NETWORK=cfx yarn up",
-    "up:aurora": "HARDHAT_NETWORK=aurora yarn up",
-    "up:evmos": "HARDHAT_NETWORK=evmos yarn up",
-    "up:movr": "HARDHAT_NETWORK=movr yarn up",
-    "up:beam": "HARDHAT_NETWORK=beam yarn up",
-    "up:eos": "HARDHAT_NETWORK=eos yarn up",
-    "up:tron": "HARDHAT_NETWORK=tron yarn up",
-    "deploy-forward": "yarn chain && hardhat run scripts/deploy-forward.js",
-    "deploy-forward:poly": "HARDHAT_NETWORK=polygon yarn deploy-forward",
-    "pool": "hardhat run scripts/pool.js",
-    "pool:eth": "HARDHAT_NETWORK=eth yarn pool",
-    "pool:bnb": "HARDHAT_NETWORK=bnb yarn pool",
-    "pool:poly": "HARDHAT_NETWORK=polygon yarn pool",
-    "pool:avax": "HARDHAT_NETWORK=avax yarn pool",
-    "pool:ftm": "HARDHAT_NETWORK=ftm yarn pool",
-    "pool:arb": "HARDHAT_NETWORK=arb yarn pool",
-    "pool:opt": "HARDHAT_NETWORK=opt yarn pool",
-    "pool:one": "HARDHAT_NETWORK=one yarn pool",
-    "pool:aurora": "HARDHAT_NETWORK=aurora yarn pool",
-    "pool:cfx": "HARDHAT_NETWORK=cfx yarn pool",
-    "pool:evmos": "HARDHAT_NETWORK=evmos yarn pool",
-    "pool:movr": "HARDHAT_NETWORK=movr yarn pool",
-    "pool:beam": "HARDHAT_NETWORK=beam yarn pool",
-    "pool:eos": "HARDHAT_NETWORK=eos yarn pool",
-    "pool:tron": "HARDHAT_NETWORK=tron yarn pool",
-    "uct": "yarn chain && hardhat run scripts/uct.js",
-    "uct:avax": "HARDHAT_NETWORK=avax yarn token",
-    "uct:arb": "HARDHAT_NETWORK=arb yarn token",
-    "uct:cfx": "HARDHAT_NETWORK=cfx yarn token",
-    "uct:evmos": "HARDHAT_NETWORK=evmos yarn token"
+    "testnet:ropsten": "hardhat deploy --testnet ropsten --upgradable true",
+    "testnet:bnb": "hardhat deploy --testnet bnb --upgradable true",
+    "testnet:polygon": "hardhat deploy --testnet polygon --upgradable true",
+    "testnet:avax": "hardhat deploy --testnet avax --upgradable true",
+    "testnet:ftm": "hardhat deploy --testnet ftm --upgradable true",
+    "testnet:cfx": "hardhat deploy --testnet cfx --upgradable true",
+    "testnet:one": "hardhat deploy --testnet one --upgradable true",
+    "testnet:aurora": "hardhat deploy --testnet aurora --upgradable true",
+    "testnet:evmos": "hardhat deploy --testnet evmos --upgradable true",
+    "testnet:gnosis": "hardhat deploy --testnet gnosis --upgradable true",
+    "testnet:eos": "hardhat deploy --testnet eos --upgradable true",
+    "testnet:zksync": "ZKSYNC=true hardhat deploy --testnet zksync --upgradable true",
+    "testnet:tron": "hardhat deploy --testnet tron --upgradable true",
+    "deploy:eth": "hardhat deploy --mainnet eth --upgradable true",
+    "deploy:bnb": "hardhat deploy --mainnet bnb --upgradable true",
+    "deploy:polygon": "hardhat deploy --mainnet polygon --upgradable true",
+    "deploy:avax": "hardhat deploy --mainnet avax --upgradable true",
+    "deploy:ftm": "hardhat deploy --mainnet ftm --upgradable true",
+    "deploy:arb": "hardhat deploy --mainnet arb --upgradable true",
+    "deploy:opt": "hardhat deploy --mainnet opt --upgradable true",
+    "deploy:one": "hardhat deploy --mainnet one --upgradable true",
+    "deploy:aurora": "hardhat deploy --mainnet aurora --upgradable true",
+    "deploy:cfx": "hardhat deploy --mainnet cfx --upgradable true",
+    "deploy:evmos": "hardhat deploy --mainnet evmos --upgradable true",
+    "deploy:movr": "hardhat deploy --mainnet movr --upgradable true",
+    "deploy:beam": "hardhat deploy --mainnet beam --upgradable true",
+    "deploy:eos": "hardhat deploy --mainnet eos --upgradable true",
+    "deploy:zksync": "ZKSYNC=true hardhat deploy --mainnet zksync --upgradable true",
+    "deploy:tron": "hardhat deploy --mainnet tron --upgradable true"
   },
   "devDependencies": {
+    "@matterlabs/hardhat-zksync-deploy": "^0.4.0",
+    "@matterlabs/hardhat-zksync-solc": "^0.3.9",
     "@mesonfi/contract-abis": "^1.0.0-alpha.1",
     "@mesonfi/contract-types": "^1.0.0-alpha.1",
     "@mesonfi/presets": "^1.0.0-alpha.1",
@@ -143,7 +76,8 @@
     "ts-generator": "^0.1.1",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "zksync-web3": "^0.9.0"
   },
   "workspaces": [
     "packages/*"
