--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.4.0",
     "@matterlabs/hardhat-zksync-solc": "^0.3.9",
-    "@mesonfi/contract-abis": "^1.0.0-alpha.1",
-    "@mesonfi/contract-types": "^1.0.0-alpha.1",
-    "@mesonfi/presets": "^1.0.0-alpha.1",
-    "@mesonfi/sdk": "^1.0.0-alpha.1",
+    "@mesonfi/contract-abis": "^1.0.0-rc.1",
+    "@mesonfi/contract-types": "^1.0.0-rc.1",
+    "@mesonfi/presets": "^1.0.0-rc.1",
+    "@mesonfi/sdk": "^1.0.0-rc.1",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.2",
@@ -65,7 +65,7 @@
     "chai": "^4.3.6",
     "dotenv": "^16.0.1",
     "ethereum-waffle": "^4.0.4",
-    "ethers": "^5.6.1",
+    "ethers": "^5.7.1",
     "hardhat": "2.10.1",
     "hardhat-change-network": "^0.0.7",
     "mocha": "^10.0.0",
@@ -78,6 +78,9 @@
     "typechain": "^8.1.0",
     "typescript": "^4.7.4",
     "zksync-web3": "^0.9.0"
+  },
+  "resolutions": {
+    "ethers": "5.7.1"
   },
   "workspaces": [
     "packages/*"
