--- a/packages/contract-abis/package.json
+++ b/packages/contract-abis/package.json
@@ -5,6 +5,9 @@
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
   "main": "abis/index.js",
+  "files": [
+    "abis"
+  ],
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   }
