--- a/packages/contract-types/package.json
+++ b/packages/contract-types/package.json
@@ -5,6 +5,9 @@
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
   "types": "types/index.js",
+  "files": [
+    "types"
+  ],
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   }
