--- a/packages/presets/package.json
+++ b/packages/presets/package.json
@@ -18,15 +18,10 @@
     "prepare": "yarn build"
   },
   "dependencies": {
-    "@ethersproject/abstract-signer": "^5.6.0",
-    "@ethersproject/bignumber": "^5.6.0",
-    "@ethersproject/contracts": "^5.6.0",
-    "@ethersproject/logger": "^5.6.0",
-    "@ethersproject/properties": "^5.6.0",
-    "@ethersproject/providers": "^5.6.0",
     "@mesonfi/contract-abis": "^1.0.0-rc.1",
     "@mesonfi/sdk": "^1.0.0-rc.1",
-    "tronweb": "^4.2.0"
+    "ethers": "^5.7.1",
+    "tronweb": "^4.3.0"
   },
   "devDependencies": {
     "typescript": "^4.7.4"
