--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meson-contracts-solidity",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0",
   "main": "index.js",
   "private": true,
   "engines": {
@@ -47,10 +47,10 @@
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.4.0",
     "@matterlabs/hardhat-zksync-solc": "^0.3.9",
-    "@mesonfi/contract-abis": "^1.0.0-rc.1",
-    "@mesonfi/contract-types": "^1.0.0-rc.1",
-    "@mesonfi/presets": "^1.0.0-rc.1",
-    "@mesonfi/sdk": "^1.0.0-rc.1",
+    "@mesonfi/contract-abis": "^1.0.0",
+    "@mesonfi/contract-types": "^1.0.0",
+    "@mesonfi/presets": "^1.0.0",
+    "@mesonfi/sdk": "^1.0.0",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.2",
