--- a/packages/contract-types/package.json
+++ b/packages/contract-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/contract-types",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
