--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@mesonfi/contract-abis": "^1.0.0",
     "@mesonfi/contract-types": "^1.0.0",
+    "aptos": "^1.3.16",
     "ethers": "^5.7.1",
     "tronweb": "^4.3.0",
     "zksync-web3": "^0.9.0"
