--- a/packages/presets/package.json
+++ b/packages/presets/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@mesonfi/contract-abis": "^1.0.0",
     "@mesonfi/sdk": "^1.0.0",
+    "aptos": "^1.3.16",
     "ethers": "^5.7.1",
     "tronweb": "^4.3.0"
   },
