--- a/packages/presets/package.json
+++ b/packages/presets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/presets",
-  "version": "1.0.0",
+  "version": "1.1.0-alpha.1",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@mesonfi/contract-abis": "^1.0.0",
-    "@mesonfi/sdk": "^1.0.0",
+    "@mesonfi/sdk": "^1.1.0-alpha.1",
     "aptos": "^1.3.16",
     "ethers": "^5.7.1",
     "tronweb": "^4.3.0"
