--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -23,12 +23,14 @@
     "@mesonfi/contract-types": "^1.0.0",
     "aptos": "^1.3.16",
     "ethers": "^5.7.1",
+    "lodash": "^4.17.21",
     "tronweb": "^4.3.0",
     "zksync-web3": "^0.9.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.3",
     "@types/chai-as-promised": "^7.1.5",
+    "@types/lodash": "^4.14.186",
     "@types/mocha": "^9.1.1",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
