--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meson-contracts-solidity",
-  "version": "1.1.0-beta.2",
+  "version": "1.1.0-rc.1",
   "main": "index.js",
   "private": true,
   "engines": {
@@ -49,8 +49,8 @@
     "@matterlabs/hardhat-zksync-solc": "^0.3.9",
     "@mesonfi/contract-abis": "^1.0.0",
     "@mesonfi/contract-types": "^1.0.0",
-    "@mesonfi/presets": "^1.1.0-beta.1",
-    "@mesonfi/sdk": "^1.1.0-beta.2",
+    "@mesonfi/presets": "^1.1.0-rc.1",
+    "@mesonfi/sdk": "^1.1.0-rc.1",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.2",
