--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "testnet:cronos": "hardhat deploy --testnet cronos --upgradable true",
     "testnet:zksync": "ZKSYNC=true hardhat deploy --testnet zksync --upgradable true",
     "testnet:tron": "hardhat deploy --testnet tron --upgradable true",
+    "testnet:sep": "hardhat deploy --testnet sep --upgradable true",
     "deploy:eth": "hardhat deploy --mainnet eth --upgradable true",
     "deploy:bnb": "hardhat deploy --mainnet bnb --upgradable true",
     "deploy:polygon": "hardhat deploy --mainnet polygon --upgradable true",
@@ -51,8 +52,8 @@
     "@matterlabs/hardhat-zksync-solc": "^0.3.9",
     "@mesonfi/contract-abis": "^1.0.0",
     "@mesonfi/contract-types": "^1.0.0",
-    "@mesonfi/presets": "^1.4.0-rc.1",
     "@mesonfi/sdk": "^1.4.0-rc.1",
+    "@mesonfi/presets": "^1.4.0-rc.6",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.2",
