Update zksync deploy scripts & hardhat.config.ts

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "testnet:gnosis": "hardhat deploy --testnet gnosis --upgradable true",
     "testnet:eos": "hardhat deploy --testnet eos --upgradable true",
     "testnet:cronos": "hardhat deploy --testnet cronos --upgradable true",
-    "testnet:zksync": "ZKSYNC=true hardhat deploy --testnet zksync --upgradable true",
+    "testnet:zksync": "hardhat deploy --testnet zksync --network zksync-testnet --upgradable true",
     "testnet:tron": "hardhat deploy --testnet tron --upgradable true",
     "testnet:sep": "hardhat deploy --testnet sep --upgradable true",
     "deploy:eth": "hardhat deploy --mainnet eth --upgradable true",
@@ -44,7 +44,7 @@
     "deploy:beam": "hardhat deploy --mainnet beam --upgradable true",
     "deploy:eos": "hardhat deploy --mainnet eos --upgradable true",
     "deploy:cronos": "hardhat deploy --mainnet cronos --upgradable true",
-    "deploy:zksync": "ZKSYNC=true hardhat deploy --mainnet zksync --upgradable true",
+    "deploy:zksync": "hardhat deploy --mainnet zksync --network zksync --upgradable true",
     "deploy:tron": "hardhat deploy --mainnet tron --upgradable true"
   },
   "devDependencies": {
