--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meson-contracts-solidity",
-  "version": "1.4.0-rc.1",
+  "version": "1.5.0",
   "main": "index.js",
   "private": true,
   "engines": {
@@ -52,8 +52,8 @@
     "@matterlabs/hardhat-zksync-solc": "^0.3.14",
     "@mesonfi/contract-abis": "^1.0.0",
     "@mesonfi/contract-types": "^1.0.0",
-    "@mesonfi/presets": "^1.4.0-rc.7",
-    "@mesonfi/sdk": "^1.4.0-rc.6",
+    "@mesonfi/presets": "^1.5.0",
+    "@mesonfi/sdk": "^1.5.0",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.2",
