--- a/packages/presets/package.json
+++ b/packages/presets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/presets",
-  "version": "1.6.0-rc.2",
+  "version": "1.7.0",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
@@ -18,8 +18,8 @@
     "prepare": "yarn build"
   },
   "dependencies": {
-    "@mesonfi/contract-abis": "^1.0.0",
-    "@mesonfi/sdk": "^1.6.0-rc.1",
+    "@mesonfi/contract-abis": "^1.7.0",
+    "@mesonfi/sdk": "^1.7.0",
     "aptos": "^1.3.16",
     "ethers": "^5.7.1",
     "tronweb": "^4.3.0"
