--- a/packages/presets/package.json
+++ b/packages/presets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/presets",
-  "version": "1.7.2",
+  "version": "1.8.0-beta.10",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "@mesonfi/contract-abis": "^1.7.0",
-    "@mesonfi/sdk": "^1.7.0",
+    "@mesonfi/sdk": "^1.8.0-beta.5",
+    "@mysten/sui.js": "^0.32.1",
     "aptos": "^1.3.16",
     "ethers": "^5.7.1",
+    "lodash": "^4.17.21",
     "tronweb": "^4.3.0"
   },
   "devDependencies": {
