--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/sdk",
-  "version": "1.7.0",
+  "version": "1.8.0-beta.5",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
@@ -21,7 +21,9 @@
   "dependencies": {
     "@mesonfi/contract-abis": "^1.7.0",
     "@mesonfi/contract-types": "^1.7.0",
+    "@mysten/sui.js": "^0.32.1",
     "aptos": "^1.3.16",
+    "cross-fetch": "^3.1.5",
     "ethers": "^5.7.1",
     "lodash": "^4.17.21",
     "tronweb": "^4.3.0",
