update sdk & reset testnets

--- a/package.json
+++ b/package.json
@@ -11,25 +11,19 @@
     "postbuild": "cp artifacts/contracts/Meson.sol/Meson.json packages/contract-abis/abis/Meson.json && cp artifacts/contracts/test/MockToken.sol/MockToken.json packages/contract-abis/abis/ERC20.json",
     "cleanbuild": "hardhat clean && yarn build",
     "build:packages": "yarn workspace @mesonfi/sdk build && yarn workspace @mesonfi/presets build",
-    "build:types": "hardhat chain --testnet ropsten && yarn cleanbuild",
-    "test": "hardhat chain --testnet ropsten && hardhat test",
+    "build:types": "hardhat chain --testnet goerli && yarn cleanbuild",
+    "test": "hardhat chain --testnet goerli && hardhat test",
     "estimate": "hardhat estimate --upgradable true",
     "docgen": "solidity-docgen --solc-module solc -t ./templates",
-    "testnet:ropsten": "hardhat deploy --testnet ropsten --upgradable true",
+    "testnet:goerli": "hardhat deploy --testnet goerli --upgradable true",
+    "testnet:sepolia": "hardhat deploy --testnet sepolia --upgradable true",
     "testnet:bnb": "hardhat deploy --testnet bnb --upgradable true",
     "testnet:polygon": "hardhat deploy --testnet polygon --upgradable true",
+    "testnet:arb": "hardhat deploy --testnet arb --upgradable true",
+    "testnet:opt": "hardhat deploy --testnet opt --upgradable true",
+    "testnet:zksync": "hardhat deploy --testnet zksync --network zksync-goerli --upgradable true",
     "testnet:avax": "hardhat deploy --testnet avax --upgradable true",
-    "testnet:ftm": "hardhat deploy --testnet ftm --upgradable true",
-    "testnet:cfx": "hardhat deploy --testnet cfx --upgradable true",
-    "testnet:one": "hardhat deploy --testnet one --upgradable true",
-    "testnet:aurora": "hardhat deploy --testnet aurora --upgradable true",
-    "testnet:evmos": "hardhat deploy --testnet evmos --upgradable true",
-    "testnet:gnosis": "hardhat deploy --testnet gnosis --upgradable true",
-    "testnet:eos": "hardhat deploy --testnet eos --upgradable true",
-    "testnet:cronos": "hardhat deploy --testnet cronos --upgradable true",
-    "testnet:zksync": "hardhat deploy --testnet zksync --network zksync-testnet --upgradable true",
     "testnet:tron": "hardhat deploy --testnet tron --upgradable true",
-    "testnet:sep": "hardhat deploy --testnet sep --upgradable true",
     "deploy:eth": "hardhat deploy --mainnet eth --upgradable true",
     "deploy:bnb": "hardhat deploy --mainnet bnb --upgradable true",
     "deploy:polygon": "hardhat deploy --mainnet polygon --upgradable true",
