--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "testnet:zksync": "hardhat deploy --testnet zksync --network zksync-goerli --upgradable true",
     "testnet:avax": "hardhat deploy --testnet avax --upgradable true",
     "testnet:tron": "hardhat deploy --testnet tron --upgradable true",
+    "testnet:linea": "hardhat deploy --testnet linea --upgradable true",
+    "testnet:scroll": "hardhat deploy --testnet scroll --upgradable true",
     "testnet:skale": "hardhat deploy --testnet skale --upgradable true",
     "deploy:eth": "hardhat deploy --mainnet eth --upgradable true",
     "deploy:bnb": "hardhat deploy --mainnet bnb --upgradable true",
