--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/sdk",
-  "version": "1.10.1",
+  "version": "1.11.0-alpha.2",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
@@ -19,8 +19,8 @@
     "prepare": "yarn build"
   },
   "dependencies": {
-    "@mesonfi/contract-abis": "^1.10.0",
-    "@mesonfi/contract-types": "^1.10.0",
+    "@mesonfi/contract-abis": "^1.11.0",
+    "@mesonfi/contract-types": "^1.11.0",
     "@mysten/sui.js": "^0.33.0",
     "aptos": "^1.3.16",
     "cross-fetch": "^3.1.5",
