--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "deploy:skale-europa": "hardhat deploy --mainnet skale-europa --upgradable true",
     "deploy:skale-nebula": "hardhat deploy --mainnet skale-nebula --upgradable true",
     "deploy:naut": "hardhat deploy --mainnet naut --upgradable true",
-    "deploy:opbnb": "hardhat deploy --mainnet opbnb --upgradable true"
+    "deploy:opbnb": "hardhat deploy --mainnet opbnb --upgradable true",
+    "deploy:scroll": "hardhat deploy --mainnet scroll --upgradable true"
   },
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.6.2",
